test/fail/ti2.fx
// Does not compile -- Issue 21 -- "incompatible types"
import java.lang.System;

class Alpha {
  function myop(x) {
	System.out.println("start");
  }
}
